# cpgeo

./: .gitignore  CMakeLists.txt  README.md  compile.py  knots.txt  main.py  pyproject.toml  setup.py
CPGEO/: __init__.py  base.py
CPGEO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CPGEO/dlls/src/CPGEO/: CPGEO.vcxproj  CPGEO.vcxproj.filters  flip_edges.cpp  get_indices_2nd.cpp
CPGEO/dlls/src/CPGEO/x64/Debug/: CPGEO.dll.recipe  CPGEO.ilk  vc143.idb
CPGEO/dlls/src/CPGEO/x64/Debug/CPGEO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPGEO.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CPGEO/dlls/src/CPGEO/x64/Release/: CPGEO.dll.recipe  CPGEO.iobj  CPGEO.ipdb  CPGEO_C.dll.recipe  CPGEO_C.iobj  CPGEO_C.ipdb
CPGEO/dlls/src/CPGEO/x64/Release/CPGEO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPGEO.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CPGEO/dlls/src/CPGEO/x64/Release/CPGEO_C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPGEO_C.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CPGEO/dlls/src/CPGEO/x64/final/: CPGEO.ilk  vc143.idb
CPGEO/dlls/src/CPGEO/x64/final/CPGEO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPGEO.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CPGEO/surface/: base.py
CPGEO/utils/: mesh.py
cmake/: cpgeoConfig.cmake.in
include/: cpgeo.h
src/cpgeo/: base.py
src/cpgeo/dlls/src/CPGEO/: CPGEO.vcxproj  get_indices.cpp  triangular_mesh.cpp
src/cpgeo/utils/: derivatives.py  sparse.py
src/cpp/: CMakeLists.txt  cpgeo.cpp
src/cpp/include/: cpgeo_mapping.h  cpgeo_seeding.h  mesh_edge_flip.h  mesh_utils.h  pch.h  space_tree.h  sphere_triangulation.h  tensor.h  triangle.h  triangulation.h
src/cpp/src/: cpgeo_mapping.cpp  cpgeo_seeding.cpp  get_thresholds.cpp  mesh_edge_flip.cpp  mesh_utils.cpp  space_tree.cpp  sphere_triangulation.cpp  tensor.cpp  triangle.cpp  triangular_mesh.cpp  triangulation.cpp
src/cpp/tests/: control_points.txt  cp_faces.txt  knots.txt  main.cpp  pointsspheremesh.txt
src/python/cpgeo/: __init__.py  capi.py  cpgeomodel.py  utils.py
src/python/cpgeo/surface/: Cylinder copy.py  Cylinder.py  Plane.py  Sphere.py  base.py
src/python/cpgeo/utils/: mesh.py  mlab_visualization.py
tests/: Surface-1_iter-19.npz  Surface-1_iter-31.npz  Surface-1_iter-34.npz  Surface-1_iter-39.npz  Surface-1_iter-4.npz  Surface-1_iter-50.npz  Surface-1_iter-8.npz  elements.txt  r.txt  test.ipynb  test.py  test_closure_edge_length.py  test_cylinder.py  test_edge_flip.py  test_edge_flip_simple.py  test_edges.py  test_mesh_partition.py  test_remesh.py  test_sphere.py  test_sphere_symmetry.py  tests_capi.py  tests_geo.py  tests_time_comsumption.py
tests/test_mesh/: test.py
tests/test_mesh/data/: data1.txt  data1_cp.txt
