[project]
name = "cpgeo"
version = "0.1.1"
description = "A library for control points-based surface."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pypardiso>=0.4.7",
    "scipy>=1.17.0",
    "pyvista>=0.46.5",
]

[tool.setuptools]
include-package-data = true
package-data = { "cpgeo" = ["dlls/**/*"] }
